<resources>
    <string name="app_name">ProyectoBien</string>
    <string name="btn_login">Login</string>
    <string name="hint_1">Usuario</string>
    <string name="hint_2">Contraseña</string>
    <string name="logo">logo</string>
    <string name="label_1">3 dots</string>
    <string name="btn_2">Categorías</string>
    <string name="btn_3">Carrito</string>
    <string name="btn_4">Log out</string>
    <string name="btn_5">Aventura</string>
    <string name="btn_6">Sci-fi</string>
    <string name="label_2">Categorías</string>
    <string name="btn_7">Acción</string>
    <string name="btn_8">Indie</string>
    <string name="btn_9">Crear categoria</string>
    <string name="btn_14">Crear videojuego</string>
    <string name="img_loz">Zelda</string>
    <string name="label_3">Videojuegos</string>
    <string name="btn_11">Videojuegos</string>
    <string name="btn_13">Agregar a carrito</string>
    <string name="todo" />
    <string name="btn_register">Registrarse</string>
    <string name="label_4">Crea una cuenta</string>
    <string name="correo">Correo</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="Recontrasena">Reingresa la contraseña</string>
    <string name="btn_create">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="categoria">Categoria</string>
    <string name="videojuego">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="costo">Costo</string>
    <string name="parsea_objeto">parsea objeto</string>
    <string name="parsea_arreglo">parsea arreglo</string>
    <string name="imagen">Imagen</string>
    <string name="hint_search">Busca un videojuego</string>
    <string name="btn_10">Home</string>
    <string name="label_5">Selecciona tu operación</string>
    <string name="btn_15">Actualizar categoria</string>
    <string name="btn_16">Actualizar videojuego</string>
    <string name="btn_17">Eliminar categoria</string>
    <string name="btn_18">Eliminar videojuego</string>
    <string name="btn_21">Eliminar</string>
    <string name="label_6">Crear Categoría</string>
    <string name="label_7">Crear Videojuego</string>
    <string name="label_8">Eliminar Categoría</string>
    <string name="label_9">Eliminar Videojuego</string>
    <string name="label_10">Actualizar Categoría</string>
    <string name="label_11">Actualizar Videojuego</string>
    <string name="label_12">Carrito</string>
    <string name="btn_19">Comprar</string>
    <string name="label_13">Descarga tus juegos</string>
    <string name="btn_20">Descargar</string>
    <string name="label_14">Para crear una nueva categoría, solo se debe de ingresar el nombre de la misma</string>
    <string name="label_15">Selecciona la categoría correspondiente</string>
    <string name="label_16">Selecciona la categoría a actualizar</string>
    <string name="label_18">Selecciona el videojuego a actualizar</string>
    <string name="label_17">Escribe la actualización</string>
    <string name="label_19">Selecciona la categoría a eliminar</string>
    <string name="label_20">Selecciona el videojuego a eliminar</string>
    <string name="apk">APK</string>

</resources>
