<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    tools:context=".Administrador">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/home"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_10"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/categorias"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_2"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/videojuegos"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_11"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/logout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_4"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtViewUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/label_5"
        android:textColor="#390000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/crearCategoria"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="#950025"
        android:text="@string/btn_9"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/crearVideojuego"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="#950025"
        android:text="@string/btn_14"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/updateCategoria"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="#950025"
        android:text="@string/btn_15"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/updateVideojuego"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="#950025"
        android:text="@string/btn_16"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/eliminarCategoria"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="#950025"
        android:text="@string/btn_17"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/eliminarVideojuego"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="#950025"
        android:text="@string/btn_18"
        android:textColor="@android:color/background_light" />

</LinearLayout>
