<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    tools:context=".CrearCategoria">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/home"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_10"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/categorias"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_2"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/videojuegos"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_11"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/logout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#950025"
            android:text="@string/btn_4"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/label_6"
        android:textColor="#390000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/label_14"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editNombreCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="15"
        android:hint="@string/categoria"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_crear"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_margin="50dp"
        android:background="#950025"
        android:text="@string/btn_9"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</LinearLayout>
