<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    tools:context=".CrearVideojuego">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/home"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_10"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/categorias"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_2"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/videojuegos"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:background="#950025"
            android:text="@string/btn_11"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/logout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#950025"
            android:text="@string/btn_4"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/label_7"
        android:textColor="#390000"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:hint="@string/videojuego"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editDesct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descripcion"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="20dp"
                android:gravity="start|top"
                android:hint="@string/imagen"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editAPK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/apk"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editCosto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:hint="@string/costo"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/label_15"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20dp"
                />

            <Button
                android:id="@+id/button_crear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="#950025"
                android:text="@string/btn_14"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
